# bulls-and-cows-bot

./: .gitignore  LICENSE  README.md
bullsncows/: Cargo.toml
bullsncows/src/: baseline_algo.rs  baseline_algo_battlefield.rs  game.rs  main.rs
bullsncows/src/algos/: algos_utils.rs  baseline_algo.rs  baseline_algo_battlefield.rs  depth_one_entropy_algo.rs  mod.rs
